SelectiveExpression added for Conditional Formatting - IsDrive

--- a/FileExplorer/Controls/FileListViewControl.xaml
+++ b/FileExplorer/Controls/FileListViewControl.xaml
@@ -171,7 +171,7 @@
                 <dxb:BarItemSeparator dxb:BarItemLinkActionBase.ItemLinkIndex="3" />
             </dxg:TableView.ColumnMenuCustomizations>
             <dxg:TableView.FormatConditions>
-                <dxg:DataBarFormatCondition FieldName="Size">
+                <dxg:DataBarFormatCondition FieldName="Size" SelectiveExpression="[IsDrive]=False">
                     <dxg:DataBarFormatCondition.Format>
                         <dx:DataBarFormat Fill="#FF26A0DA" />
                     </dxg:DataBarFormatCondition.Format>
@@ -226,7 +226,7 @@
                 <dxb:BarItemSeparator dxb:BarItemLinkActionBase.ItemLinkIndex="3" />
             </dxg:TreeListView.ColumnMenuCustomizations>
             <dxg:TreeListView.FormatConditions>
-                <dxg:DataBarFormatCondition FieldName="Size">
+                <dxg:DataBarFormatCondition FieldName="Size" SelectiveExpression="[IsDrive]=False">
                     <dxg:DataBarFormatCondition.Format>
                         <dx:DataBarFormat Fill="#FF26A0DA" />
                     </dxg:DataBarFormatCondition.Format>
@@ -236,8 +236,8 @@
         <DXDataTemplateSelector x:Key="FileSizeTemplateSelector">
             <DXDataTemplateTrigger Binding="{Binding RowData.Row.IsDrive}" Value="True">
                 <DataTemplate>
-                    <dxe:ProgressBarEdit ShowBorder="False" ContentDisplayMode="Value" DisplayTextConverter="{common:IntToFileSizeConverter}" 
-                                                     Maximum="{Binding RowData.Row.Size}" EditValue="{DXBinding 'RowData.Row.Size - RowData.Row.FreeSpace', Mode=OneWay}" />
+                    <dxe:ProgressBarEdit ShowBorder="False" Margin="0,1" ContentDisplayMode="Value" DisplayTextConverter="{common:IntToFileSizeConverter}" 
+                                         Maximum="{Binding RowData.Row.Size}" EditValue="{DXBinding 'RowData.Row.Size - RowData.Row.FreeSpace', Mode=OneWay}" />
                 </DataTemplate>
             </DXDataTemplateTrigger>
         </DXDataTemplateSelector>
