Fixed issue 51: saved layout is not applied if it is opened from outside.

--- a/FileExplorer/View/BrowserTabView.xaml
+++ b/FileExplorer/View/BrowserTabView.xaml
@@ -509,6 +509,7 @@
             </dxlc:LayoutGroup>
             <controls:FileListViewControl x:Name="FileList" Margin="0,0,-1,-1" ItemsSource="{Binding DisplayItems}"
                                           FixedFilter="{Binding FilterCriteria, Mode=OneWay}" HighlightedText="{Binding HighlightedText}"
+                                          Loaded="{DXEvent '@ElementName(FileList).LoadFolderLayout(CurrentFolder.FullPath)'}"
                                           ItemsSourceChanged="{DXEvent '@ElementName(FileList).LoadFolderLayout(CurrentFolder.FullPath)'}"
                                           RowDoubleClickCommand="{Binding OpenItemCommand}" EditSelectedItemsCommand="{Binding RenameItemsCommand}">
                 <controls:FileListViewControl.EditSelectedItemCommand>
